Finish Pop Movies Stage 2
- previously unintentionally commited API_KEY in the build.gradle and pushed it into the GitHub, use git reset to clear the commit histories (sacrificed all the step by step commit histories)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="action_movie_top_rated">Sort by Top Rated</string>
     <string name="error_text">An error occurred please try again</string>
     <string name="button_mark_as_favorite">Mark as Favorite</string>
+    <string name="button_unfavorite">Unfavorite</string>
     <string name="img_mov_poster">Movie Poster</string>
+    <string name="default_video_type">Trailer</string>
+    <string name="review_author">Author</string>
+    <string name="review_content">Content</string>
+    <string name="action_movie_favorites">Favorites Movies</string>
 </resources>
