Fix based on review: persisting state of current displayed movies list
- add toast for action "Mark as Favorite / Unfavorite"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="review_author">Author</string>
     <string name="review_content">Content</string>
     <string name="action_movie_favorites">Favorites Movies</string>
+    <string name="toast_favorite">Movie is added to favorites list</string>
+    <string name="toast_unfavorite">Movie is removed from favorites list</string>
 </resources>
